Se agregan cambios para facturacion